--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "@kessler/serverless-onehook",
   "version": "1.0.0",
-  "description": "",
+  "description": "one hook to rule them all",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+		"type": "git",
+		"url": "https://github.com/kessler/serverless-onehook"
+	},
   "author": "Yaniv Kessler",
   "license": "Apache-2.0"
 }
